Comentado los juegos creados automaticamente con el dataconfig ya que estoy usando la api