@@ -62,32 +62,32 @@ public class DataInitializer implements CommandLineRunner {
 
         seedMasterTables();
 
-        // Crear juegos de ejemplo si no existen
-        if (gameRepository.count() == 0) {
-            Game[] games = {
-                    createGame("Hollow Knight", "Una aventura épica en un reino de insectos en ruinas. Explora cavernas tortuosas, combate contra criaturas corrompidas y haz nuevas amistades con extraños insectos.",
-                            "https://www.youtube.com/embed/UAO2urG23S4", "https://cdn.akamai.steamstatic.com/steam/apps/367520/header.jpg",
-                            "Team Cherry", List.of("Metroidvania", "Acción"), List.of("PC", "Nintendo Switch", "PlayStation 4", "Xbox One"), LocalDate.of(2017, 2, 24)),
-
-                    createGame("Celeste", "Ayuda a Madeline a sobrevivir a sus demonios internos en su viaje hasta la cima de la montaña Celeste, en este juego de plataformas súper ajustado hecho a mano.",
-                            "https://www.youtube.com/embed/70d9irlxiB4", "https://cdn.akamai.steamstatic.com/steam/apps/504230/header.jpg",
-                            "Maddy Makes Games", List.of("Plataformas", "Indie"), List.of("PC", "Nintendo Switch", "PlayStation 4", "Xbox One"), LocalDate.of(2018, 1, 25)),
-
-                    createGame("Hades", "Desafía al dios de los muertos como el príncipe inmortal del Inframundo, en este juego de exploración de mazmorras de ritmo trepidante de los creadores de Bastion y Transistor.",
-                            "https://www.youtube.com/embed/91t0ha9x0ME", "https://cdn.akamai.steamstatic.com/steam/apps/1145360/header.jpg",
-                            "Supergiant Games", List.of("Roguelike", "Acción"), List.of("PC", "Nintendo Switch", "PlayStation 4", "PlayStation 5", "Xbox One", "Xbox Series X|S"), LocalDate.of(2020, 9, 17)),
-
-                    createGame("Stardew Valley", "Acabas de heredar la vieja parcela agrícola de tu abuelo en Stardew Valley. Decides partir hacia una nueva vida con unas herramientas usadas y algo de dinero.",
-                            "https://www.youtube.com/embed/ot7uXNQskhs", "https://cdn.akamai.steamstatic.com/steam/apps/413150/header.jpg",
-                            "ConcernedApe", List.of("Simulación", "RPG"), List.of("PC", "Nintendo Switch", "PlayStation 4", "Xbox One", "Mobile"), LocalDate.of(2016, 2, 26)),
-
-                    createGame("Cuphead", "Cuphead es un juego de acción clásico estilo 'dispara y corre' que se centra en combates contra jefes. Inspirado en los dibujos animados de los años 30.",
-                            "https://www.youtube.com/embed/NN-9SQXoi50", "https://cdn.akamai.steamstatic.com/steam/apps/268910/header.jpg",
-                            "Studio MDHR", List.of("Acción", "Plataformas"), List.of("PC", "Nintendo Switch", "PlayStation 4", "Xbox One"), LocalDate.of(2017, 9, 29))
-            };
-
-            gameRepository.saveAll(Arrays.asList(games));
-        }
+//        // Crear juegos de ejemplo si no existen
+//        if (gameRepository.count() == 0) {
+//            Game[] games = {
+//                    createGame("Hollow Knight", "Una aventura épica en un reino de insectos en ruinas. Explora cavernas tortuosas, combate contra criaturas corrompidas y haz nuevas amistades con extraños insectos.",
+//                            "https://www.youtube.com/embed/UAO2urG23S4", "https://cdn.akamai.steamstatic.com/steam/apps/367520/header.jpg",
+//                            "Team Cherry", List.of("Metroidvania", "Acción"), List.of("PC", "Nintendo Switch", "PlayStation 4", "Xbox One"), LocalDate.of(2017, 2, 24)),
+//
+//                    createGame("Celeste", "Ayuda a Madeline a sobrevivir a sus demonios internos en su viaje hasta la cima de la montaña Celeste, en este juego de plataformas súper ajustado hecho a mano.",
+//                            "https://www.youtube.com/embed/70d9irlxiB4", "https://cdn.akamai.steamstatic.com/steam/apps/504230/header.jpg",
+//                            "Maddy Makes Games", List.of("Plataformas", "Indie"), List.of("PC", "Nintendo Switch", "PlayStation 4", "Xbox One"), LocalDate.of(2018, 1, 25)),
+//
+//                    createGame("Hades", "Desafía al dios de los muertos como el príncipe inmortal del Inframundo, en este juego de exploración de mazmorras de ritmo trepidante de los creadores de Bastion y Transistor.",
+//                            "https://www.youtube.com/embed/91t0ha9x0ME", "https://cdn.akamai.steamstatic.com/steam/apps/1145360/header.jpg",
+//                            "Supergiant Games", List.of("Roguelike", "Acción"), List.of("PC", "Nintendo Switch", "PlayStation 4", "PlayStation 5", "Xbox One", "Xbox Series X|S"), LocalDate.of(2020, 9, 17)),
+//
+//                    createGame("Stardew Valley", "Acabas de heredar la vieja parcela agrícola de tu abuelo en Stardew Valley. Decides partir hacia una nueva vida con unas herramientas usadas y algo de dinero.",
+//                            "https://www.youtube.com/embed/ot7uXNQskhs", "https://cdn.akamai.steamstatic.com/steam/apps/413150/header.jpg",
+//                            "ConcernedApe", List.of("Simulación", "RPG"), List.of("PC", "Nintendo Switch", "PlayStation 4", "Xbox One", "Mobile"), LocalDate.of(2016, 2, 26)),
+//
+//                    createGame("Cuphead", "Cuphead es un juego de acción clásico estilo 'dispara y corre' que se centra en combates contra jefes. Inspirado en los dibujos animados de los años 30.",
+//                            "https://www.youtube.com/embed/NN-9SQXoi50", "https://cdn.akamai.steamstatic.com/steam/apps/268910/header.jpg",
+//                            "Studio MDHR", List.of("Acción", "Plataformas"), List.of("PC", "Nintendo Switch", "PlayStation 4", "Xbox One"), LocalDate.of(2017, 9, 29))
+//            };
+//
+//            gameRepository.saveAll(Arrays.asList(games));
+//        }
 
         try {
             igdbSyncService.syncCatalogAndCurrentMonthReleases();
